feat: 즐겨찾기 목록 조회 API 추가 및 게시글 조회 DTO 수정(#403)